# ravynos

./: .gitignore  CMakeLists.txt  Makefile
CoreServices/: Makefile
Developer/: CMakeLists.txt  _PROVENANCE
Developer/CarbonHeaders/: Availability.h  TargetConditionals.h
Developer/Default.xctoolchain/: CMakeLists.txt
Developer/Toolchains/Default.xctoolchain/: CMakeLists.txt
Developer/XcodeDefault.xctoolchain/: CMakeLists.txt
Developer/cctools/: CMakeLists.txt
Developer/cctools/ld64/: create_compile_stubs.sh
Developer/cctools/ld64/src/: CMakeLists.txt  configure.h
Developer/cctools/ld64/src/ld/: CMakeLists.txt  Options.cpp  configure.h
Developer/cctools/ld64/src/ld/code-sign-blobs/: blob.h
Developer/cctools/ld64/src/ld/parsers/: CMakeLists.txt  textstub_dylib_file.cpp
Developer/cctools/ld64/src/ld/parsers/libunwind/: AddressSpace.hpp
Developer/cctools/ld64/src/ld/passes/: CMakeLists.txt
Developer/cmake/: crosscompile.cmake  kext.cmake
Developer/dtrace_ctf/: CMakeLists.txt
Developer/llvm-project/clang-tools-extra/clangd/test/: input-mirror.test
Developer/llvm-project/clang/include/clang/Lex/: PreprocessorOptions.h
Developer/llvm-project/clang/lib/Basic/Targets/: OSTargets.cpp
Developer/llvm-project/lldb/test/API/lang/swift/clangimporter/explicit_cc1/: TestSwiftClangImporterExplicitCC1.py
Developer/llvm-project/lldb/tools/debugserver/source/: CMakeLists.txt
Developer/llvm-project/llvm/test/DebugInfo/X86/: live-debug-values-expr-conflict.ll
Developer/llvm-project/tapi/: CMakeLists.txt
Developer/llvm-project/tapi/include/tapi/Core/: API.h
Developer/llvm-project/tapi/lib/Core/: Framework.cpp
Developer/llvm-project/tapi/lib/ObjCMetadata/: ObjCMetadata.cpp
Developer/llvm-project/tapi/lib/SDKDB/: CMakeLists.txt
Developer/mig/: CMakeLists.txt  mig.sh
Developer/ravynOS.sdk/: CMakeLists.txt
Developer/xar/: CMakeLists.txt
Developer/xcbuild/: CMakeLists.txt
Developer/xcbuild/Libraries/pbxbuild/Sources/Tool/: ScriptResolver.cpp
Docs/: BUILDING.md
Kernel/: CMakeLists.txt  _PROVENANCE
Kernel/Extensions/: CMakeLists.txt
Kernel/Extensions/IOATAFamily/: CMakeLists.txt
Kernel/Extensions/IOStorageFamily/: CMakeLists.txt
Kernel/Extensions/pthread/: CMakeLists.txt  pthread-Info.plist
Kernel/libfirehose_kernel/: CMakeLists.txt
Kernel/libkmod/: CMakeLists.txt
Kernel/xnu/: CMakeLists.txt  preprocess_files.cmake
Kernel/xnu/EXTERNAL_HEADERS/: AvailabilityMacros.h
Kernel/xnu/SETUP/config/: Makefile  lexer.l
Kernel/xnu/SETUP/installfile/: Makefile
Kernel/xnu/SETUP/kextsymboltool/: kextsymboltool.c
Kernel/xnu/SETUP/setsegname/: setsegname.c
Kernel/xnu/bsd/kern/: bsd_init.c  makekdebugevents.py  subr_log.c
Kernel/xnu/bsd/net/: content_filter.c
Kernel/xnu/bsd/sys/: disk.h  make_symbol_aliasing.sh
Kernel/xnu/cmake/: make_symbol_aliasing.sh.in
Kernel/xnu/iokit/DriverKit/: IOBufferMemoryDescriptor.h  IOBufferMemoryDescriptor.iig.cpp  IODMACommand.h  IODMACommand.iig.cpp  IODataQueueDispatchSource.h  IODataQueueDispatchSource.iig.cpp  IODispatchQueue.h  IODispatchQueue.iig.cpp  IODispatchSource.h  IODispatchSource.iig.cpp  IOInterruptDispatchSource.h  IOInterruptDispatchSource.iig.cpp  IOMemoryDescriptor.h  IOMemoryDescriptor.iig.cpp  IOMemoryMap.h  IOMemoryMap.iig.cpp  IOService.h  IOService.iig.cpp  IOServiceNotificationDispatchSource.h  IOServiceNotificationDispatchSource.iig.cpp  IOUserClient.h  IOUserClient.iig.cpp  IOUserServer.h  IOUserServer.iig.cpp  Makefile  OSAction.h  OSAction.iig.cpp  OSObject.h  OSObject.iig.cpp
Kernel/xnu/iokit/Kernel/: IOPMrootDomain.cpp
Kernel/xnu/libkern/libclosure/: runtime.cpp
Kernel/xnu/libkern/os/: log.c
Kernel/xnu/makedefs/: MakeInc.def  MakeInc.kernel  MakeInc.rule  MakeInc.top
Kernel/xnu/osfmk/i386/: postcode.h
Kernel/xnu/osfmk/ipc/: mach_kernelrpc.c
Kernel/xnu/osfmk/kern/: printf.c  priority_queue.h  startup.c  turnstile.h
Kernel/xnu/osfmk/x86_64/: start.s
Kernel/xnu/tools/lldbmacros/: ioreg.py  ipc.py  kasan.py  kcdata.py  macho.py  mbufs.py  memory.py  misc.py  net.py  pci.py  pgtrace.py  pmap.py  process.py  scheduler.py  skywalk.py  structanalyze.py  sysreg.py  ulock.py  userspace.py  utils.py  waitq.py  xnudefines.py  xnutriage.py  zonetriage.py
Kernel/xnu/tools/lldbmacros/core/: cvalue.py  operating_system.py  standard.py  syntax_checker.py
Kernel/xnu/tools/lldbmacros/usertaskdebugging/: gdbserver.py  interface.py  rsprotocol.py
Libraries/: CMakeLists.txt  _PROVENANCE
Libraries/CommonCrypto/windows/lib/: lib.vcxproj  lib.vcxproj.filters
Libraries/Libc/: CMakeLists.txt
Libraries/dyld/include/mach-o/: dyld.h
SystemLibrary/: SystemVersion.plist.in
contrib/: _PROVENANCE
contrib/cctools/: CMakeLists.txt
contrib/cctools/misc/: .CMakeLists.txt.swp
contrib/cmake/: crosscompile.cmake  kext.cmake
contrib/mig/: CMakeLists.txt  _PROVENANCE
contrib/unifdef/: CMakeLists.txt
ravynOS/: CMakeLists.txt
tools/: Makefile  build.sh  make.conf
