
set(TOOLS ${TOOLCHAIN}/usr/bin)
set(PATH "${TOOLS}:$ENV{PATH}")

set(AS ${TOOLS}/as)
set(CC ${TOOLS}/cc)
set(CMAKE_C_COMPILER ${TOOLS}/cc)
set(CXX ${TOOLS}/c++)
set(CMAKE_CXX_COMPILER ${TOOLS}/c++)
set(LD ${TOOLS}/ld64)
set(AR ${TOOLS}/ar)
set(RANLIB ${TOOLS}/ranlib)
set(NM ${TOOLS}/nm)
set(CODESIGN_ALLOCATE ${TOOLS}/codesign_allocate)
set(CTFCONVERT ${TOOLS}/ctfconvert)
set(CTFMERGE ${TOOLS}/ctfmerge)
set(CTFINSERT ${TOOLS}/ctfinsert)
set(IIG /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/iig)
set(MIG ${TOOLS}/mig)
set(MIGCOM ${TOOLS}/../libexec/migcom)
set(STRIP ${TOOLS}/strip)
set(LIPO ${TOOLS}/lipo)
set(NM ${TOOLS}/nm)
set(NMEDIT ${TOOLS}/nmedit)
set(LIBTOOL ${TOOLS}/libtool)
set(UNIFDEF ${TOOLS}/unifdef)
set(DSYMUTIL ${TOOLS}/dsymutil)
set(XCBUILD ${TOOLS}/xcbuild)
set(XCODEBUILD ${TOOLS}/xcodebuild)
set(XCRUN ${TOOLS}/xcrun)

set(ENV{RUNTIME_SPEC_PATH} ${CMAKE_SOURCE_DIR}/Developer/xcbuild/Specifications)
set(ENV{DERIVED_DATA_DIR} ${CMAKE_CURRENT_BINARY_DIR})

#add_subdirectory(Libc)